<resources>
    <string name="app_name">الأذكار والتحصين</string>
    <string name="add_dhikr">إضافة ذكر</string>
    <string name="tab_all">الكل</string>
    <string name="tab_morning">أذكار الصباح</string>
    <string name="tab_evening">أذكار المساء</string>
    <string name="tab_custom">أذكاري</string>
    <string name="reset">إعادة ضبط</string>
    <string name="next">التالي</string>
    <string name="prev">السابق</string>
    <string name="target_label">المستهدف: %1$d</string>
    <string name="tap_to_count">اضغط للتسبيح</string>
    <string name="add_dialog_title">إضافة ذكر جديد</string>
    <string name="hint_dhikr_text">أدخل نص الذكر أو الدعاء...</string>
    <string name="hint_target">العدد المستهدف (مثال: 33)</string>
    <string name="save">حفظ الذكر</string>
    <string name="cancel">إلغاء</string>
    <string name="empty_list">لا توجد أذكار متوفرة في هذا التصنيف</string>
    <string name="category_label">التصنيف</string>
</resources>